# obscura

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml
.claude/: launch.json
.github/workflows/: ci.yml  lourd.yml
atelier/: .gitignore  00-tout.ps1  01-wallets.ps1  02-genese.ps1  03-noeuds.ps1  04-synchroniser.ps1  05-payer.ps1  06-resync.ps1  99-reset.ps1  README.md  lib.ps1
crates/circuit/: Cargo.toml
crates/circuit/examples/: dimensionner-ouverture.rs  tx_bench.rs
crates/circuit/src/: balance.rs  key.rs  lib.rs  membership.rs  merkle_level.rs  merkle_path.rs  output.rs  owner_hash.rs  range_check.rs  rescue_perm.rs  rescue_round.rs  spend.rs  sponge.rs  tx.rs
crates/circuit/src/monolith/: air.rs  layout.rs  mod.rs  seg_air.rs  seg_layout.rs  seg_trace.rs  socle.rs  trace.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: aead.rs  hash.rs  kem.rs  lib.rs  sig.rs
crates/crypto/tests/: acvp_mldsa65.rs  acvp_mlkem768.rs
crates/crypto/tests/vecteurs/: PROVENANCE.md  mldsa65-sigver.txt  mlkem768-decap.txt
crates/ledger/: Cargo.toml
crates/ledger/src/: bloc.rs  historique.rs  keys.rs  lib.rs  mempool.rs  merkle.rs  note.rs  proved_state.rs  proved_wallet.rs  state.rs  tx.rs
crates/ledger/tests/: e2e.rs
crates/net/: Cargo.toml
crates/net/src/: connexion.rs  dandelion.rs  frame.rs  handshake.rs  lib.rs  pairs.rs  session.rs
crates/net/tests/: handshake.rs
crates/node/: Cargo.toml
crates/node/examples/: dimensionner-ouverture.rs  dimensionner-quorum.rs  semer-corpus-fuzz.rs
crates/node/src/: archive.rs  autorite.rs  client.rs  etranglement.rs  journal.rs  lib.rs  message.rs  orchestration.rs  persistance.rs  runtime.rs  synchro.rs  votes.rs
crates/node/tests/: chaos_producteur.rs  conformite.rs  cycle_wallet.rs  deux_noeuds.rs  finalite.rs  mutations_semantiques.rs  negociation_version.rs  paiement_wallet.rs  partition.rs  quorum_sockets.rs  rattrapage.rs  reconfiguration.rs  robustesse_decodeurs.rs  synchronisation.rs  temoin.rs  testnet.rs  vue_sockets.rs
crates/proved-hash/: Cargo.toml
crates/proved-hash/src/: amount.rs  digest.rs  domain.rs  felt.rs  lib.rs  merkle.rs  rescue.rs
crates/proved-hash/tests/: golden.rs
crates/proved-hash/vectors/: encoding_v1.json
crates/wallet/: Cargo.toml
crates/wallet/src/: adresse.rs  lib.rs  persistance.rs  synchro.rs
crates/zk-spike/: Cargo.toml
crates/zk-spike/src/: lib.rs
deploiement/: Dockerfile  obscura-node.service  release.pub  signer-release.sh  verifier-release.sh
deploiement/tests/: signer-release.test.sh
docs/: ARCHITECTURE.md  BACKEND_PQ.md  CONFORMITE.md  GENESE.md  OPERATEUR.md  OUVERTURE.md  POST_QUANTIQUE.md  PROTOCOL.md  STABILITE.md  STARK_STATEMENT.md  TESTNET.md  THREAT_MODEL.md  obscura-atelier-pratique.html  obscura-atelier.html  obscura-overview.html
docs/fixtures/conformite-v1/: README.md  attendu.txt  autorite.cle
docs/fixtures/conformite-v2/: README.md  attendu.txt  autorite.cle
docs/fixtures/conformite-v3/: README.md  attendu.txt  autorite.cle
docs/superpowers/plans/: 2026-07-14-hierarchie-shielded-secret.md  2026-07-15-3a0-encodage-proved-hash.md  2026-07-15-3a1-rescue-prime.md  2026-07-15-3a2-permutation-skeleton.md  2026-07-19-3za-monolithe-prive.md  2026-07-20-3zb1-witness-hiding.md  2026-07-20-3zc1-monolithe-empile.md  2026-07-20-enc-notes-provedtx.md  2026-07-20-feature-gate-dev.md  2026-07-20-merkle-frontier.md  2026-07-20-state-persistence.md  2026-07-21-3zc1-T3-air-segmentee.md  2026-07-22-j1a-format-0x04.md  2026-07-22-j1b1-votes-et-certificat.md  2026-07-22-porte-aud.md  2026-07-23-cloture-voie-sans-regret.md  2026-07-23-j1b2-changement-de-vue.md  2026-07-23-j1c-changement-autorites.md  2026-07-23-j3-consensus-perimetre-b.md  2026-07-23-t5-ouverture-testnet.md
docs/superpowers/specs/: 2026-07-14-hierarchie-shielded-secret-design.md  2026-07-15-3a1-rescue-prime-design.md  2026-07-15-3a2-permutation-skeleton-design.md  2026-07-15-3a2b-owner-hash-design.md  2026-07-15-3b1-sponge-multibloc-design.md  2026-07-15-3b2-merkle-swap-design.md  2026-07-15-phase3-decision-et-3a0-design.md  2026-07-19-3b5a-key-proof-design.md  2026-07-19-3b5b-spend-bundle-design.md  2026-07-19-3b5c-output-bundle-design.md  2026-07-19-3b5d-proved-tx-bundle-design.md  2026-07-19-3za-monolithe-prive-design.md  2026-07-20-3zb0-spike-faisabilite-design.md  2026-07-20-3zb0-spike-rapport.md  2026-07-20-3zb1-witness-hiding-design.md  2026-07-20-3zc1-monolithe-empile-design.md  2026-07-20-enc-notes-provedtx-design.md  2026-07-20-feature-gate-dev-design.md  2026-07-20-merkle-frontier-design.md  2026-07-20-provedtx-serialisation-design.md  2026-07-20-state-persistence-design.md  2026-07-20-zeroize-secrets-design.md  2026-07-21-3z-c2-variabilite-min-nout-design.md  2026-07-21-atelier-interactif-design.md  2026-07-21-election-producteur-design.md  2026-07-21-transport-pq-design.md  2026-07-22-j1-consensus-adr.md  2026-07-22-j2-economie-adr.md  2026-07-22-portes-vers-le-mainnet-design.md  2026-07-22-testnet-public-0-design.md  2026-07-23-cloture-voie-sans-regret-design.md  2026-07-23-j1b2-changement-de-vue-design.md  2026-07-23-j1c-changement-autorites-design.md  2026-07-23-j3-consensus-perimetre-b-design.md  2026-07-23-reste-a-faire-vers-B.md  2026-07-23-t5-ouverture-testnet-design.md  2026-07-24-appartenance-anti-sybil-adr.md  2026-07-24-decisions-A-carte.md  2026-07-24-spike-da1-mesure-masquage-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bloc.rs  etat.rs  historique.rs  merkle_frontier.rs  merkle_tree.rs  message.rs  proved_tx.rs  reponse_historique.rs  wallet_fichier.rs
outils/: convertir-acvp.py
