[workspace]
resolver = "2"
members = ["crates/crypto", "crates/ledger", "crates/proved-hash", "crates/circuit"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.87"

[workspace.dependencies]
blake3 = "1.5"
sha3 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = "2.1"
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"
thiserror = "1.0"
zeroize = "1.7"
proptest = "1"
winter-crypto = "0.13"
winter-math = "0.13"
winterfell = "0.13"

[profile.release]
lto = "thin"
