[package]
name = "crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
blake3.workspace = true
sha3.workspace = true
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
pqcrypto-mlkem.workspace = true
pqcrypto-mldsa.workspace = true
pqcrypto-traits.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true
rand_core.workspace = true
thiserror.workspace = true
hex.workspace = true
zeroize.workspace = true
