[package]
name = "ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
crypto = { path = "../crypto" }
proved-hash = { path = "../proved-hash" }
circuit = { path = "../circuit" }
serde.workspace = true
rand_core.workspace = true
thiserror.workspace = true
hex.workspace = true
