[package]
name = "ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
crypto = { path = "../crypto" }
proved-hash = { path = "../proved-hash" }
circuit = { path = "../circuit" }
serde.workspace = true
rand_core.workspace = true
thiserror.workspace = true
hex.workspace = true
zeroize.workspace = true

[features]
# Mode transparent de développement (LedgerState/apply_transparent, tx en clair,
# Merkle BLAKE3, Note owner-BLAKE3) : NON-consensus, OFF par défaut. Le build nu
# n'expose que la surface consensus (proved_state/proved_wallet/keys).
dev-transparent = []
