[package]
name = "node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
circuit = { path = "../circuit" }
crypto = { path = "../crypto" }
ledger = { path = "../ledger" }
net = { path = "../net" }
proved-hash = { path = "../proved-hash" }
wallet = { path = "../wallet" }
thiserror.workspace = true
rand_core.workspace = true
