[package]
name = "proved-hash"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror.workspace = true
hex.workspace = true
serde = { workspace = true }
zeroize.workspace = true
winter-crypto = { workspace = true }
winter-math = { workspace = true }

[dev-dependencies]
proptest.workspace = true
serde_json = "1"
