[package]
name = "wallet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
circuit = { path = "../circuit" }
crypto = { path = "../crypto" }
ledger = { path = "../ledger" }
proved-hash = { path = "../proved-hash" }
hex.workspace = true
rand_core.workspace = true
thiserror.workspace = true
argon2.workspace = true
zeroize.workspace = true
